# BytecodeMachine

./: .gitignore  CMakeLists.txt  README.md  build.gradle  sample  sample.txt  sampleProgram.txt  settings.gradle
include/: Compiler.h  Machine.h
src/: Compiler.cpp  Machine.cpp  Machine.h  main.cpp
src/main/java/com/github/kdm1jkm/BytecodeMachine/: Main.java
